--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,6 +9,11 @@ before:
 builds:
 - env:
   - CGO_ENABLED=0
+goos:
+  - darwin
+  - linux
+  - windows
+  - freebsd
 archives:
 - replacements:
     darwin: Darwin
